--- a/app/templates/ticket.html
+++ b/app/templates/ticket.html
@@ -29,6 +29,7 @@
             </div>
         </div>
     </div>
+    
     <div class="footer">
         <div class="row">
             <div class="col-12">Present this ticket to the tool crib attendant.</div>
@@ -50,9 +51,62 @@
                 <!-- <button onclick="window.print();" class="noPrint">Print Me</button> -->
             </div>
         </div>
-    </div>
-    
-</div>  <!-- END OF PARENT WRAPPER -->
+        <!-- font test -->
+        <div class="row">
+        </div>
+
+        <br>break
+        <h1>h1 font size</h1>
+        <h2>h2 font size</h2>
+        <h3>h3 font size</h3>
+        <h4>h4 font size</h4>
+        <h5>h5 font size</h5>
+        <h6>h6 font size</h6>
+
+        <br>
+        <div>default font-size</div>
+        <div style="font-size: 1rem;">font-size 1rem </div>
+        <div style="font-size: 1.5rem;">1.5rem </div>
+        <div style="font-size: 2rem;">2rem </div>
+        <div style="font-size: 2.5rem;">2.5rem </div>
+        <div style="font-size: 3rem;">3rem </div>
+
+        <br>
+        <div style="font-size:2rem">default font-weight</div>
+        <div style="font-size:2rem;font-weight: 100;">font-weight 100 </div>
+        <div style="font-size:2rem;font-weight: 200;">font-weight 200 </div>
+        <div style="font-size:2rem;font-weight: 300;">font-weight 300 </div>
+        <div style="font-size:2rem;font-weight: 400;">font-weight 400 </div>
+        <div style="font-size:2rem;font-weight: 500;">font-weight 500 </div>
+        <div style="font-size:2rem;font-weight: 600;">font-weight 600 </div>
+        <div style="font-size:2rem;font-weight: 700;">font-weight 700 </div>
+        <br>
+        
+        <div style="text-align:left;border:1px solid black">text align left</div>
+        <br>
+        <div style="text-align:center;border:1px solid black">text align center</div>
+        <br>
+        <div style="text-align:right;border:1px solid black">text align right</div>
+        <br>
+        <div style="text-align:center">
+            font normal and
+            <span style="font-weight: 400;">
+               span font-weight 400 
+            </span> 
+        </div>
+        <br>
+        <div style="text-align:center;border:1px solid black">font normal div 
+            <span style="font-weight: 700;">
+                span - font-weight 700 
+            </span>    
+        </div>
+        <br>
+        <div style="font:italic">italic</div>
+        <div style="font-family: 'Times New Roman', Times, serif;">Times New Roman</div>
+        <div style="font-family: 'Courier New', Courier, monospace">Courier New</div>
+        <div style="font-family:Arial, Helvetica, sans-serif">Arial</div>
+        <div style="font-family:Verdana, Geneva, Tahoma, sans-serif">Verdana</div>
+    </div>  <!-- END OF PARENT WRAPPER -->
 
 
 <!-- Modal for error messages. -->
