--- a/app/templates/certifiedMachines.html
+++ b/app/templates/certifiedMachines.html
@@ -83,7 +83,7 @@
         </div>
         <div class="row"></div>
         <div class="row" style="text-align:center">
-            <div id=ticketMachineID class="col-12"></div>
+            <div id=ticketKeyNumber class="col-12"></div>
             <br>
             <div id="ticketBodyDetail">
                 <div id="msgLines"></div>
