--- a/app/templates/ticket.html
+++ b/app/templates/ticket.html
@@ -25,7 +25,7 @@
 
         <div class="row">
             <div class="col-12">
-                Key for machine # - {{machineID}}
+                Key # {{keyNumber}} for machine # - {{machineID}}
             </div>
         </div>
     </div>
