--- a/app/templates/certifiedMachines.html
+++ b/app/templates/certifiedMachines.html
@@ -68,43 +68,35 @@
 
 
 <div class="ticket areaToPrint">
-    <div id="heading">
-        <h1 id='ticketTitle' style="text-align:center">Machine Request</h1>
-        <h1 id="ticketDate">todays date</h1>
-    </div>
     
-    <div id="ticketBody">
-        <div class="row" style="text-align:center">
-            <div id=ticketName class="col-12">Name</div>
-        </div>
-        <br>
-        <div class="row" style="text-align:center;font-weight: 400;">
-            <div id=ticketMachineDesc class="col-12">machine desc</div>
-        </div>
-        <div class="row"></div>
-        <div class="row" style="text-align:center">
-            <div id=ticketKeyNumber class="col-12"></div>
-            <br>
-            <div id="ticketBodyDetail">
-                <div id="msgLines"></div>
-
-                <div id="listOfNames"></div>
-                <!-- IF KEYS ARE KEPT IN THE TOOL CRIB -->
-                <!-- MESSAGE TO PICK UP KEY IN TOOL CRIB -->
-
-                <!-- IF KEY PROVIDERS ARE BEING USED, INSTRUCTIONS ... -->
-                <!-- LIST OF KEY PROVIDERS -->
-
-                <!-- IF NOT AUTHORIZED THEN INSTRUCTIONS FOR CONTACTING MACHINE ASSISTANTS -->
-                <!-- LIST OF MACHINE ASSISTANTS -->
-            </div>
-        </div>
+    <div id='ticketTitle' style="text-align:center">Machine Request</div>
+    <div id="ticketDate">todays date</div>
+    <hr>
+    <br>
+    <br>
+    
+    <div id=ticketName class="col-12">Name</div>
+    <br>
+    <br>
+    <div class="row">
+        <div id=ticketMachineDesc class="col-12">machine desc</div>
     </div>
-    <div id="ticketFooter">
-        <!-- <div class="row">
-            <div class="col-12" style="text-align:center">Please select PRINT</div>
-        </div> -->
-    </div>
+   
+    <div class="row" style="text-align:center">
+        <div id=ticketKeyNumber class="col-12"></div>
+    </div>     
+    <div id="msgLines"></div>
+    <br><br>
+    <div id="listOfNames"></div>
+    <!-- IF KEYS ARE KEPT IN THE TOOL CRIB -->
+    <!-- MESSAGE TO PICK UP KEY IN TOOL CRIB -->
+
+    <!-- IF KEY PROVIDERS ARE BEING USED, INSTRUCTIONS ... -->
+    <!-- LIST OF KEY PROVIDERS -->
+
+    <!-- IF NOT AUTHORIZED THEN INSTRUCTIONS FOR CONTACTING MACHINE ASSISTANTS -->
+    <!-- LIST OF MACHINE ASSISTANTS -->
+        
 </div>
 <!-- Modal for error messages. -->
 <div class="modal fade" id="myModalMsg" tabindex="-1" role="dialog" aria-   labelledby="exampleModalCenterTitle" aria-hidden="true">
